--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service android:name=".BGMusicService" />
         <activity android:name=".GameActivity"></activity>
         <activity android:name=".ImagePickingActivity">
             <intent-filter>
