--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/AppTheme">
         <service android:name=".BGMusicService" />
         <activity android:name=".GameActivity"></activity>
+        <activity android:name=".LeaderBoardActivity"></activity>
         <activity android:name=".ImagePickingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
