change the java code structure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service android:name=".BGMusicService" />
-        <activity android:name=".GameActivity"></activity>
-        <activity android:name=".LeaderBoardActivity"></activity>
-        <activity android:name=".ImagePickingActivity">
+        <service android:name=".service.BGMusicService" />
+        <activity android:name=".activity.GameActivity"></activity>
+        <activity android:name=".activity.LeaderBoardActivity"></activity>
+        <activity android:name=".activity.ImagePickingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
