added CreditsActivity.java, activity_credits.xml and updated AndroidManifest.xml, HomeActivity.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service android:name=".service.BGMusicService" />
-        <activity android:name=".activity.GameActivity"></activity>
-        <activity android:name=".activity.ImagePickingActivity"></activity>
-        <activity android:name=".activity.LeaderBoardActivity"></activity>
+        <activity android:name=".activity.CreditsActivity"></activity>
 
+        <service android:name=".service.BGMusicService" />
+
+        <activity android:name=".activity.GameActivity" />
+        <activity android:name=".activity.ImagePickingActivity" />
+        <activity android:name=".activity.LeaderBoardActivity" />
         <activity android:name=".activity.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
