--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,19 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service android:name=".service.BGMusicService" />
         <activity android:name=".activity.VideoOnStartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".activity.CreditsActivity" />
-
-        <service android:name=".service.BGMusicService" />
-
         <activity android:name=".activity.GameActivity" />
-        <activity android:name=".activity.ImagePickingActivity" />
+        <activity android:name=".activity.ImagePickingActivity">
+    </activity>
         <activity android:name=".activity.LeaderBoardActivity" />
         <activity android:name=".activity.HomeActivity">
         </activity>
